--- a/Python/Ionplot.ipynb
+++ b/Python/Ionplot.ipynb
@@ -54,18 +54,8 @@
     "plt.rcParams['lines.linewidth'] = 1\n",
     "plt.rcParams['xtick.direction'] = 'in'\n",
     "plt.rcParams['ytick.direction'] = 'in'\n",
-    "#from mpl_toolkits.mplot3d import Axes3D\n",
-    "#dir=\"D:\\\\doc\\\\data\\\\ion1testold\\\\DifferentDelatTimeOfPumpAndProbe\\\\dteq50fs\\\\\"\n",
-    "#dir=\"D:\\\\doc\\\\data\\\\ion1testold\\\\t500t840\\\\44\\\\\"\n",
-    "#dir='F:\\\\doc\\\\ion360\\\\t_30_60\\\\'\n",
-    "dir='D:\\\\doc\\\\data\\\\ion1testold\\\\42n\\\\'\n",
-    "dir='D:\\\\doc\\\\data\\\\ion1test\\\\alilong\\\\'\n",
-    "dir='D:\\\\doc\\\\data\\\\ion1test\\\\twopump\\\\t2\\\\'\n",
-    "dir='D:\\\\doc\\\\data\\\\ion1test\\\\testP1\\\\'\n",
-    "dir='D:\\\\dataofpro\\\\2062130\\\\'\n",
-    "dir='D:\\\\doc\\\\data\\\\onepump\\\\'\n",
-    "# dir='D:\\\\doc\\\\data\\\\ion1testold\\\\1140fs\\\\0\\\\'\n",
-    "# dir='D:\\\\doc\\\\data\\\\ion1testold\\\\wave\\\\21\\\\'\n",
+    "from mpl_toolkits.mplot3d import Axes3D\n",
+    "dir='D:\\\\doc\\\\data\\\\ion1test\\\\twoPump\\\\20110\\\\'\n",
     "print('Working directory',dir)\n",
     "print(\"\\n\")\n",
     "f=open(dir+\"alog.dat\",encoding=\"utf-8\")\n",
@@ -281,40 +271,6 @@
    "metadata": {},
    "source": [
     "Plot orientation and alignment of the groud state"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if os.path.exists(dir+\"cos1.dat\"):\n",
-    "    data=np.loadtxt(dir+\"cos1.dat\")\n",
-    "else:\n",
-    "    data=np.loadtxt(dir+\"orientationAndAlignment.dat\")\n",
-    "\n",
-    "x=data[:,0]\n",
-    "y1=data[:,1]\n",
-    "y2=data[:,2]\n",
-    "print(max(y2),min(y2))\n",
-    "fig, ax1 = plt.subplots()\n",
-    "color = 'tab:red'\n",
-    "ax1.set_xlabel('Time ('+timeUnit+')')\n",
-    "ax1.set_ylabel('$\\\\langle{\\\\rm  cos} \\\\theta \\\\rangle$', color=color)\n",
-    "ax1.plot(x, y1, color=color)\n",
-    "ax1.tick_params(axis='y', labelcolor=color)\n",
-    "\n",
-    "ax2 = ax1.twinx()  # instantiate a second axes that shares the same x-axis\n",
-    "\n",
-    "color = 'tab:blue'\n",
-    "ax2.set_ylabel('$\\\\langle{\\\\rm cos^2} \\\\theta \\\\rangle$', color=color)  # we already handled the x-label with ax1\n",
-    "ax2.plot(x, y2,'--', color=color)\n",
-    "ax2.tick_params(axis='y', labelcolor=color)\n",
-    "\n",
-    "fig.tight_layout()  # otherwise the right y-label is slightly clipped\n",
-    "plt.savefig(dir+\"OrientationAndAlignment.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
-    "plt.show()"
    ]
   },
   {
@@ -605,145 +561,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from matplotlib.ticker import MaxNLocator\n",
-    "plt.figure(figsize=(cm_to_inch(16),cm_to_inch(13)))\n",
-    "ax1=plt.subplot(2,1,1)\n",
-    "DataPop =np.loadtxt(dir+\"p_vgr_v.dat\")\n",
-    "#plt.style.use('_mpl-gallery-nogrid')\n",
-    "x=DataPop[:,0]\n",
-    "y=DataPop[:,1]\n",
-    "z=DataPop[:,2]\n",
-    "ny=int((max(y)-min(y))/(y[2]-y[1]))+1\n",
-    "nx=int((max(x)-min(x))/(x[ny]-x[0]))+1+1\n",
-    "zMesh=np.zeros((ny,nx))\n",
-    "for i in range(1,nx):\n",
-    "    for j in range(1,ny):\n",
-    "        zMesh[j-1,i-1]=z[(i-1)*ny+j-1]\n",
-    "print('nx= ',nx,' ny= ',ny)\n",
-    "print('xMax= ',max(x),' xMin= ',min(x),' yMax= ',max(y),' yMin= ',min(y))\n",
-    "print('x[50]',x[50])\n",
-    "print(x[0])\n",
-    "print(zMesh)\n",
-    "xMesh=np.linspace(min(x),max(x),nx)\n",
-    "yMesh=np.linspace(min(y),max(y),ny)\n",
-    "#xx,yy,zz=np.meshgrid(xMesh,yMesh,zMesh)\n",
-    "plt.pcolormesh(xMesh,yMesh,zMesh,cmap='jet')\n",
-    "ax1.yaxis.set_major_locator(MaxNLocator(integer=True))\n",
-    "plt.title(\"(a) Ground State\",loc='left')\n",
-    "plt.xlim(x[0]/2,max(x)-x[0])\n",
-    "plt.ylim(-0.5,5.5)\n",
-    "plt.xlabel('Time ('+timeUnit+')')\n",
-    "plt.ylabel('$V$')\n",
-    "plt.colorbar()\n",
-    "ax2=plt.subplot(2,1,2)\n",
-    "DataPop =np.loadtxt(dir+\"p_exc_v.dat\")\n",
-    "#plt.style.use('_mpl-gallery-nogrid')\n",
-    "x=DataPop[:,0]\n",
-    "y=DataPop[:,1]\n",
-    "z=DataPop[:,2]\n",
-    "ny=int((max(y)-min(y))/(y[2]-y[1]))+1\n",
-    "nx=int((max(x)-min(x))/(x[ny]-x[0]))+1\n",
-    "zMesh=np.zeros((ny,nx))\n",
-    "for i in range(1,nx):\n",
-    "    for j in range(1,ny):\n",
-    "        zMesh[j-1,i-1]=z[(i-1)*ny+j-1]\n",
-    "# print('nx= ',nx,' ny= ',ny)\n",
-    "# print('xMax= ',max(x),' xMin= ',min(x),' yMax= ',max(y),' yMin= ',min(y))\n",
-    "# print('x[50]',x[50])\n",
-    "# print(x[0])\n",
-    "# print(zMesh)\n",
-    "xMesh=np.linspace(min(x),max(x),nx)\n",
-    "yMesh=np.linspace(min(y),max(y),ny)\n",
-    "#xx,yy,zz=np.meshgrid(xMesh,yMesh,zMesh)\n",
-    "plt.pcolormesh(xMesh,yMesh,zMesh,cmap='jet')\n",
-    "ax2.yaxis.set_major_locator(MaxNLocator(integer=True))\n",
-    "plt.title(\"(b) Excited state\",loc='left')\n",
-    "plt.xlabel('Time ('+timeUnit+')')\n",
-    "plt.ylabel('$V$')\n",
-    "plt.xlim(x[0]/2,max(x)-x[0])\n",
-    "plt.ylim(-0.5,20.5)\n",
-    "plt.colorbar()\n",
-    "plt.subplots_adjust(left=0.125,\n",
-    "                    bottom=0.1, \n",
-    "                    right=0.9, \n",
-    "                    top=0.9, \n",
-    "                    wspace=0.25, \n",
-    "                    hspace=0.3)\n",
-    "plt.savefig(dir+\"P_v.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Plot orientation and alignment of the electronic states"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data=np.loadtxt(dir+\"ori_ali_1.dat\")\n",
-    "x=data[:,0]\n",
-    "y1=data[:,1]\n",
-    "y2=data[:,2]\n",
-    "\n",
-    "fig, ax1 = plt.subplots()\n",
-    "\n",
-    "color = 'tab:red'\n",
-    "ax1.set_xlabel('Time ('+timeUnit+')')\n",
-    "ax1.set_ylabel('$\\\\langle{\\\\rm cos\\\\, } \\\\theta \\\\rangle$', color=color)\n",
-    "ax1.plot(x, y1, color=color)\n",
-    "ax1.tick_params(axis='y', labelcolor=color)\n",
-    "\n",
-    "ax2 = ax1.twinx()  # instantiate a second axes that shares the same x-axis\n",
-    "\n",
-    "color = 'tab:blue'\n",
-    "ax2.set_ylabel('$\\\\langle {\\\\rm cos^2} \\\\theta \\\\rangle$', color=color)  # we already handled the x-label with ax1\n",
-    "ax2.plot(x, y2,'--', color=color)\n",
-    "ax2.tick_params(axis='y', labelcolor=color)\n",
-    "\n",
-    "fig.tight_layout()  # otherwise the right y-label is slightly clipped\n",
-    "plt.savefig(dir+\"GroundAlignmentAndOrientation.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data=np.loadtxt(dir+\"ori_ali_2.dat\")\n",
-    "x=data[:,0]\n",
-    "y1=data[:,1]\n",
-    "y2=data[:,2]\n",
-    "\n",
-    "fig, ax1 = plt.subplots()\n",
-    "\n",
-    "color = 'tab:red'\n",
-    "ax1.set_xlabel('Time ('+timeUnit+')')\n",
-    "ax1.set_ylabel('$\\\\langle{\\\\rm cos\\\\, } \\\\theta \\\\rangle$', color=color)\n",
-    "ax1.plot(x, y1, color=color)\n",
-    "ax1.tick_params(axis='y', labelcolor=color)\n",
-    "\n",
-    "ax2 = ax1.twinx()  # instantiate a second axes that shares the same x-axis\n",
-    "\n",
-    "color = 'tab:blue'\n",
-    "ax2.set_ylabel('$\\\\langle {\\\\rm cos^2} \\\\theta \\\\rangle$', color=color)  # we already handled the x-label with ax1\n",
-    "ax2.plot(x, y2,'--', color=color)\n",
-    "ax2.tick_params(axis='y', labelcolor=color)\n",
-    "\n",
-    "fig.tight_layout()  # otherwise the right y-label is slightly clipped\n",
-    "plt.savefig(dir+\"ExcitedAlignmentAndOrientation.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
-    "plt.show()"
    ]
   },
   {
@@ -860,9 +681,241 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data=np.loadtxt(dir+\"ori_ali_1.dat\")\n",
+    "x=data[:,0]\n",
+    "y1=data[:,1]\n",
+    "y2=data[:,2]\n",
+    "\n",
+    "fig, ax1 = plt.subplots()\n",
+    "\n",
+    "color = 'tab:red'\n",
+    "ax1.set_xlabel('Time ('+timeUnit+')')\n",
+    "ax1.set_ylabel('$\\\\langle{\\\\rm cos\\\\, } \\\\theta \\\\rangle$', color=color)\n",
+    "ax1.plot(x, y1, color=color)\n",
+    "ax1.tick_params(axis='y', labelcolor=color)\n",
+    "\n",
+    "ax2 = ax1.twinx()  # instantiate a second axes that shares the same x-axis\n",
+    "\n",
+    "color = 'tab:blue'\n",
+    "ax2.set_ylabel('$\\\\langle {\\\\rm cos^2} \\\\theta \\\\rangle$', color=color)  # we already handled the x-label with ax1\n",
+    "ax2.plot(x, y2,'--', color=color)\n",
+    "ax2.tick_params(axis='y', labelcolor=color)\n",
+    "\n",
+    "fig.tight_layout()  # otherwise the right y-label is slightly clipped\n",
+    "plt.savefig(dir+\"GroundAlignmentAndOrientation.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data=np.loadtxt(dir+\"ori_ali_2.dat\")\n",
+    "x=data[:,0]\n",
+    "y1=data[:,1]\n",
+    "y2=data[:,2]\n",
+    "\n",
+    "fig, ax1 = plt.subplots()\n",
+    "\n",
+    "color = 'tab:red'\n",
+    "ax1.set_xlabel('Time ('+timeUnit+')')\n",
+    "ax1.set_ylabel('$\\\\langle{\\\\rm cos\\\\, } \\\\theta \\\\rangle$', color=color)\n",
+    "ax1.plot(x, y1, color=color)\n",
+    "ax1.tick_params(axis='y', labelcolor=color)\n",
+    "\n",
+    "ax2 = ax1.twinx()  # instantiate a second axes that shares the same x-axis\n",
+    "\n",
+    "color = 'tab:blue'\n",
+    "ax2.set_ylabel('$\\\\langle {\\\\rm cos^2} \\\\theta \\\\rangle$', color=color)  # we already handled the x-label with ax1\n",
+    "ax2.plot(x, y2,'--', color=color)\n",
+    "ax2.tick_params(axis='y', labelcolor=color)\n",
+    "\n",
+    "fig.tight_layout()  # otherwise the right y-label is slightly clipped\n",
+    "plt.savefig(dir+\"ExcitedAlignmentAndOrientation.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from matplotlib.ticker import MaxNLocator\n",
+    "plt.figure(figsize=(cm_to_inch(16),cm_to_inch(13)))\n",
+    "ax1=plt.subplot(2,1,1)\n",
+    "DataPop =np.loadtxt(dir+\"p_vgr_v.dat\")\n",
+    "#plt.style.use('_mpl-gallery-nogrid')\n",
+    "x=DataPop[:,0]\n",
+    "y=DataPop[:,1]\n",
+    "z=DataPop[:,2]\n",
+    "ny=int((max(y)-min(y))/(y[2]-y[1]))+1\n",
+    "nx=int((max(x)-min(x))/(x[ny]-x[0]))+1+1\n",
+    "zMesh=np.zeros((ny,nx))\n",
+    "for i in range(1,nx):\n",
+    "    for j in range(1,ny):\n",
+    "        zMesh[j-1,i-1]=z[(i-1)*ny+j-1]\n",
+    "print('nx= ',nx,' ny= ',ny)\n",
+    "print('xMax= ',max(x),' xMin= ',min(x),' yMax= ',max(y),' yMin= ',min(y))\n",
+    "print('x[50]',x[50])\n",
+    "print(x[0])\n",
+    "print(zMesh)\n",
+    "xMesh=np.linspace(min(x),max(x),nx)\n",
+    "yMesh=np.linspace(min(y),max(y),ny)\n",
+    "#xx,yy,zz=np.meshgrid(xMesh,yMesh,zMesh)\n",
+    "plt.pcolormesh(xMesh,yMesh,zMesh,cmap='jet')\n",
+    "ax1.yaxis.set_major_locator(MaxNLocator(integer=True))\n",
+    "plt.title(\"(a) Ground State\",loc='left')\n",
+    "plt.xlim(x[0]/2,max(x)-x[0])\n",
+    "plt.ylim(-0.5,5.5)\n",
+    "plt.xlabel('Time ('+timeUnit+')')\n",
+    "plt.ylabel('$V$')\n",
+    "plt.colorbar()\n",
+    "ax2=plt.subplot(2,1,2)\n",
+    "DataPop =np.loadtxt(dir+\"p_exc_v.dat\")\n",
+    "#plt.style.use('_mpl-gallery-nogrid')\n",
+    "x=DataPop[:,0]\n",
+    "y=DataPop[:,1]\n",
+    "z=DataPop[:,2]\n",
+    "ny=int((max(y)-min(y))/(y[2]-y[1]))+1\n",
+    "nx=int((max(x)-min(x))/(x[ny]-x[0]))+1\n",
+    "zMesh=np.zeros((ny,nx))\n",
+    "for i in range(1,nx):\n",
+    "    for j in range(1,ny):\n",
+    "        zMesh[j-1,i-1]=z[(i-1)*ny+j-1]\n",
+    "# print('nx= ',nx,' ny= ',ny)\n",
+    "# print('xMax= ',max(x),' xMin= ',min(x),' yMax= ',max(y),' yMin= ',min(y))\n",
+    "# print('x[50]',x[50])\n",
+    "# print(x[0])\n",
+    "# print(zMesh)\n",
+    "xMesh=np.linspace(min(x),max(x),nx)\n",
+    "yMesh=np.linspace(min(y),max(y),ny)\n",
+    "#xx,yy,zz=np.meshgrid(xMesh,yMesh,zMesh)\n",
+    "plt.pcolormesh(xMesh,yMesh,zMesh,cmap='jet')\n",
+    "ax2.yaxis.set_major_locator(MaxNLocator(integer=True))\n",
+    "plt.title(\"(b) Excited state\",loc='left')\n",
+    "plt.xlabel('Time ('+timeUnit+')')\n",
+    "plt.ylabel('$V$')\n",
+    "plt.xlim(x[0]/2,max(x)-x[0])\n",
+    "plt.ylim(-0.5,20.5)\n",
+    "plt.colorbar()\n",
+    "plt.subplots_adjust(left=0.125,\n",
+    "                    bottom=0.1, \n",
+    "                    right=0.9, \n",
+    "                    top=0.9, \n",
+    "                    wspace=0.25, \n",
+    "                    hspace=0.3)\n",
+    "plt.savefig(dir+\"P_v.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if os.path.exists(dir+\"cos1.dat\"):\n",
+    "    data=np.loadtxt(dir+\"cos1.dat\")\n",
+    "else:\n",
+    "    data=np.loadtxt(dir+\"orientationAndAlignment.dat\")\n",
+    "\n",
+    "x=data[:,0]\n",
+    "y1=data[:,1]\n",
+    "y2=data[:,2]\n",
+    "print(max(y2),min(y2))\n",
+    "fig, ax1 = plt.subplots()\n",
+    "color = 'tab:red'\n",
+    "ax1.set_xlabel('Time ('+timeUnit+')')\n",
+    "ax1.set_ylabel('$\\\\langle{\\\\rm  cos} \\\\theta \\\\rangle$', color=color)\n",
+    "ax1.plot(x, y1, color=color)\n",
+    "ax1.tick_params(axis='y', labelcolor=color)\n",
+    "\n",
+    "ax2 = ax1.twinx()  # instantiate a second axes that shares the same x-axis\n",
+    "\n",
+    "color = 'tab:blue'\n",
+    "ax2.set_ylabel('$\\\\langle{\\\\rm cos^2} \\\\theta \\\\rangle$', color=color)  # we already handled the x-label with ax1\n",
+    "ax2.plot(x, y2,'--', color=color)\n",
+    "ax2.tick_params(axis='y', labelcolor=color)\n",
+    "\n",
+    "fig.tight_layout()  # otherwise the right y-label is slightly clipped\n",
+    "plt.savefig(dir+\"OrientationAndAlignment.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "\n",
-    "data=np.loadtxt(dir+'eneTRJV.dat')\n",
+    "data=np.loadtxt(dir+'eneTRJVgro.dat')\n",
+    "t = data[:,0]\n",
+    "outDir=dir\n",
+    "population_by_continent = {\n",
+    "        'Translation': data[:,1],\n",
+    "        'Rotation':  data[:,2],\n",
+    "        'Vibration': data[:,3],\n",
+    "        \n",
+    "        \n",
+    "}\n",
+    "fig, ax = plt.subplots()\n",
+    "ax.stackplot(t, population_by_continent.values(),\n",
+    "             labels=population_by_continent.keys(), alpha=1)\n",
+    "ax.legend(loc='upper left')\n",
+    "#ax.set_title('World population')\n",
+    "ax.set_xlabel('Time (fs)')\n",
+    "ax.set_ylabel('Energy (a.u.)')\n",
+    "\n",
+    "plt.savefig(outDir+'EnergyRJVgro.'+figureType,bbox_inches ='tight',dpi=figureDPI)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "data=np.loadtxt(dir+'eneTRJVexc.dat')\n",
+    "t = data[:,0]\n",
+    "outDir=dir\n",
+    "population_by_continent = {\n",
+    "    'Translation': data[:,1],\n",
+    "    'Rotation':  data[:,2],\n",
+    "    'Vibration':  data[:,3],\n",
+    "}\n",
+    "fig, ax = plt.subplots()\n",
+    "ax.stackplot(t, population_by_continent.values(),\n",
+    "             labels=population_by_continent.keys(), alpha=1)\n",
+    "ax.legend(loc='upper right')\n",
+    "#ax.set_title('World population')\n",
+    "ax.set_xlabel('Time (fs)')\n",
+    "ax.set_ylabel('Energy (a.u.)')\n",
+    "\n",
+    "plt.savefig(outDir+'EnergyRJVexc.'+figureType,bbox_inches ='tight',dpi=figureDPI)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "data=np.loadtxt(dir+'eneTRJVion.dat')\n",
     "t = data[:,0]\n",
     "outDir=dir\n",
     "population_by_continent = {\n",
@@ -951,6 +1004,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "intDir=dir\n",
     "fig = plt.figure(constrained_layout=True)\n",
     "plt.figure(figsize=(16/2.54,13/2.54))\n",
     "data=np.loadtxt(intDir+'ktot.dat')\n",
