--- a/Python/Ionplot.ipynb
+++ b/Python/Ionplot.ipynb
@@ -55,7 +55,7 @@
     "plt.rcParams['xtick.direction'] = 'in'\n",
     "plt.rcParams['ytick.direction'] = 'in'\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
-    "dir='D:\\\\doc\\\\data\\\\ion1test\\\\twoPump\\\\20110\\\\'\n",
+    "dir='D:\\\\doc\\\\data\\\\ion1test\\\\11400\\\\'\n",
     "print('Working directory',dir)\n",
     "print(\"\\n\")\n",
     "f=open(dir+\"alog.dat\",encoding=\"utf-8\")\n",
@@ -91,7 +91,7 @@
     "    dt=np.loadtxt(dir+'LaserField.dat')[1,0]-np.loadtxt(dir+'LaserField.dat')[0,0]\n",
     "else:\n",
     "    print('Cant find the data file')\n",
-    "TimeTurn=(min(np.loadtxt(dir+'ori_ali_1.dat')[:,0])) \n",
+    "TimeTurn=(min(np.loadtxt(dir+'timeenergyspctra.dat')[:,0])) \n",
     "if TimeEnd<5:\n",
     "    print('The unit of time is ps!')\n",
     "    timeUnit=\"ps\"\n",
@@ -681,13 +681,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "data=np.loadtxt(dir+\"ori_ali_1.dat\")\n",
     "x=data[:,0]\n",
@@ -872,7 +865,7 @@
     "fig, ax = plt.subplots()\n",
     "ax.stackplot(t, population_by_continent.values(),\n",
     "             labels=population_by_continent.keys(), alpha=1)\n",
-    "ax.legend(loc='upper left')\n",
+    "ax.legend(loc='lower center')\n",
     "#ax.set_title('World population')\n",
     "ax.set_xlabel('Time (fs)')\n",
     "ax.set_ylabel('Energy (a.u.)')\n",
@@ -899,7 +892,7 @@
     "fig, ax = plt.subplots()\n",
     "ax.stackplot(t, population_by_continent.values(),\n",
     "             labels=population_by_continent.keys(), alpha=1)\n",
-    "ax.legend(loc='upper right')\n",
+    "ax.legend(loc='center')\n",
     "#ax.set_title('World population')\n",
     "ax.set_xlabel('Time (fs)')\n",
     "ax.set_ylabel('Energy (a.u.)')\n",
@@ -1492,7 +1485,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "import  imageio\n",
     "import os\n",
     "def compose_gif(image_list,gif_name,myduration):\n",
