--- a/Python/FindMax.ipynb
+++ b/Python/FindMax.ipynb
@@ -41,7 +41,7 @@
     "plt.rcParams['xtick.direction'] = 'in'\n",
     "plt.rcParams['ytick.direction'] = 'in'\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
-    "dir='D:\\\\doc\\\\data\\\\ori\\\\oritest1\\\\'\n",
+    "dir='D:\\\\doc\\\\data\\\\ori\\\\35\\\\'\n",
     "print('Working directory',dir)\n",
     "print(\"\\n\")\n",
     "f=open(dir+\"alog.dat\",encoding=\"utf-8\")\n",
@@ -203,6 +203,7 @@
     "\n",
     "j=0\n",
     "dataw=np.loadtxt(\"D:\\\\K.txt\")\n",
+    "dir='D:\\\\doc\\\\data\\\\ori\\\\35\\\\'\n",
     "f=open(dir+'TmpTimOri.dat','w')\n",
     "for ii in range(0,1000,1):\n",
     "    T=ii*0.1\n",
