--- a/Python/OriPaperPlot.ipynb
+++ b/Python/OriPaperPlot.ipynb
@@ -41,15 +41,23 @@
     "plt.rcParams['xtick.direction'] = 'in'\n",
     "plt.rcParams['ytick.direction'] = 'in'\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
-    "dir='D:\\\\doc\\\\data\\\\ori\\\\dataforplot\\\\'\n",
-    "print('Working directory',dir)\n",
-    "print(\"\\n\")\n",
     "# f=open(dir+\"alog.dat\",encoding=\"utf-8\")\n",
     "# print(f.read(1500))\n",
     "levels=100\n",
     "figureDPI=1200\n",
     "figureType=\"jpeg\"\n",
     "timeUnit=\"fs\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dir='D:\\\\dataofpro\\\\'\n",
+    "print('Working directory',dir)\n",
+    "print(\"\\n\")"
    ]
   },
   {
@@ -148,6 +156,113 @@
     "plt.xlabel('Delay time (fs)')\n",
     "plt.ylabel('$\\\\langle cos \\\\theta\\\\rangle$')\n",
     "plt.savefig(dir+\"f3TwoSameHCPOrimax.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data=np.loadtxt('E:\\\\dataforplot\\\\data\\\\F4.dat')\n",
+    "x=data[:,0]\n",
+    "y1=data[:,1]\n",
+    "y2=data[:,2]\n",
+    "y3=data[:,3]\n",
+    "y4=data[:,4]\n",
+    "y5=data[:,5]\n",
+    "y6=data[:,6]\n",
+    "plt.style.use('_mpl-gallery')\n",
+    "# make data:\n",
+    "np.random.seed(1)\n",
+    "X =x\n",
+    "D = data[:,1:6]\n",
+    "# plot:\n",
+    "fig, ax = plt.subplots()\n",
+    "vp = ax.violinplot(D, X, widths=2,\n",
+    "                   showmeans=False, showmedians=False, showextrema=False)\n",
+    "# styling:\n",
+    "for body in vp['bodies']:\n",
+    "    body.set_alpha(0.9)\n",
+    "# ax.violinplot(D, X)#orientation=\"vertical\", lineoffsets=x)#, linewidth=0.75)\n",
+    "# ax.set(xlim=(0, 8), xticks=np.arange(1, 8),\n",
+    "#        ylim=(0, 8), yticks=np.arange(1, 8))\n",
+    "plt.savefig(dir+\"f4RotaPop.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "data=np.loadtxt('D:\\\\dataforplot\\\\data\\\\F4.dat')\n",
+    "x=data[:,0]\n",
+    "y1=data[:,1]\n",
+    "y2=data[:,2]\n",
+    "y3=data[:,3]\n",
+    "y4=data[:,4]\n",
+    "y5=data[:,5]\n",
+    "y6=data[:,6]\n",
+    "year =x # [1950, 1960, 1970, 1980, 1990, 2000, 2010, 2018]\n",
+    "population_by_continent = {\n",
+    "    '$|0,0\\\\rangle$': y1,#[228, 284, 365, 477, 631, 814, 1044, 1275],\n",
+    "    '$|0,1\\\\rangle$': y2,#[340, 425, 519, 619, 727, 840, 943, 1006],\n",
+    "    '$|0,2\\\\rangle$': y3,#[1394, 1686, 2120, 2625, 3202, 3714, 4169, 4560],\n",
+    "    '$|0,3\\\\rangle$': y4,#[220, 253, 276, 295, 310, 303, 294, 293],\n",
+    "    '$|0,4\\\\rangle$': y5,#[12, 15, 19, 22, 26, 31, 36, 39],\n",
+    "    '$|0,5\\\\rangle$': y6,\n",
+    "}\n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "ax.stackplot(year, population_by_continent.values(),\n",
+    "             labels=population_by_continent.keys(), alpha=0.8)\n",
+    "ax.legend(loc='center',bbox_to_anchor=(0.5, 0.07,0.2, 0.2),fontsize=4.5,ncol=1)\n",
+    "# ax.set_title('World population')\n",
+    "ax.set_xlabel('Delay time (fs)')\n",
+    "ax.set_ylabel('Population')\n",
+    "plt.savefig(dir+\"f4RotaPop.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data=np.loadtxt('D:\\\\dataforplot\\\\data\\\\F4.dat')\n",
+    "x=data[:,0]\n",
+    "y1=data[:,1]\n",
+    "y2=data[:,2]\n",
+    "y3=data[:,3]\n",
+    "y4=data[:,4]\n",
+    "y5=data[:,5]\n",
+    "y6=data[:,6]\n",
+    "labels =x# ['G1', 'G2', 'G3', 'G4', 'G5']\n",
+    "p1 = [20, 35, 30, 35, 27]\n",
+    "women_means = [25, 32, 34, 20, 25]\n",
+    "men_std = [2, 3, 4, 1, 2]\n",
+    "women_std = [3, 5, 2, 3, 3]\n",
+    "width = 0.1      # the width of the bars: can also be len(x) sequence\n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "\n",
+    "ax.bar(labels, y1, width, label='$|0,0\\\\rangle$')\n",
+    "ax.bar(labels, y2, width, label='$|0,1\\\\rangle$')\n",
+    "ax.bar(labels, y3, width, label='$|0,2\\\\rangle$')\n",
+    "ax.bar(labels, y4, width, label='$|0,3\\\\rangle$')\n",
+    "ax.bar(labels, y5, width, label='$|0,4\\\\rangle$')\n",
+    "ax.bar(labels, y6, width, label='$|0,5\\\\rangle$')\n",
+    "\n",
+    "\n",
+    "ax.set_ylabel('Population')\n",
+    "ax.set_title('Delay time (fs)')\n",
+    "# ax.legend()\n",
+    "\n",
+    "plt.show()"
    ]
   },
   {
@@ -305,7 +420,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.0 64-bit",
+   "display_name": "Python 3.10.5 64-bit (windows store)",
    "language": "python",
    "name": "python3"
   },
@@ -319,12 +434,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "5addf786bcd861d1ce5006f23111f8cbb206731e5b61b0a5632ba9e0252558a8"
+    "hash": "8687b81b5d14307c58608bd19c9f92d9c321847991efa868faf2d3a3bcd23c46"
    }
   }
  },
